[package]
name = "sneak"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking"] }
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "echo"
path = "src/echo/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"